# pysyringe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MIGRATION.md  Makefile  README.md  RELEASE.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
design/: README.md
design/docs/: README.md
design/kit/: README.md
design/landing/: README.md
docs/: build.py  content.md  index.html  style.css  template.html
docs/1.5/: index.html
docs/2.0/: index.html  style.css
docs/docs/: index.html
docs/docs/1.5/: index.html  style.css
docs/docs/2.0/: index.html
pysyringe/: __init__.py  container.py  singleton.py
scripts/: check-tag-version.sh
tests/: test_container.py  test_django_integration.py  test_future_annotations.py  test_singleton.py
