[project]
name = "pysyringe"
dynamic = ["version"]
description = "An opinionated dependency injection library for Python"
authors = [
    {name = "Hugo Chinchilla", email = "hugoasecas@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.11"
dependencies = []
keywords = ["dependency-injection", "di", "ioc", "container", "inject"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "coverage>=7.3",
    "pre-commit>=3.4.0",
    "ruff>=0.2.0",
    "ty>=0.0.1a7",
    "pytest>=8.3.5",
    "markdown>=3.5",
    "pygments>=2.17",
    "django>=4.2",
]

[project.urls]
homepage = "https://github.com/hugochinchilla/pysyringe"
repository = "https://github.com/hugochinchilla/pysyringe"
documentation = "https://www.hugochinchilla.net/pysyringe/docs/"
issues = "https://github.com/hugochinchilla/pysyringe/issues"
changelog = "https://github.com/hugochinchilla/pysyringe/blob/master/CHANGELOG.md"


[tool.ruff]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
lint.select = [
    "E4",
    "E7",
    "E9",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN001",
    "ANN2",
    "ANN4",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A001",
    "A002",
    "COM",
    "C",
    #"DTZ",
    "T",
    #"DJ",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "ERA",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "RUF",
]
lint.ignore = ["ANN401", "UP015", "COM812", "TRY401", "PLR2004", "PLR0911"]

# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".cache",
    ".direnv",
    ".git",
    ".git-rewrite",
    ".venv",
    "venv",
    "__pypackages__",
    "__pycache__",
    "docs",
]

line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Match requires-python so 3.12-only syntax is rejected.
target-version = "py311"

cache-dir = ".cache/ruff"

[tool.ruff.lint.per-file-ignores]
"./tests/*" = ["ANN201", "ANN202", "ARG001", "S101", "S106"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = ["docs/"]

[tool.ty.rules]
# Promote warnings to errors so they block CI
redundant-cast = "error"
unused-ignore-comment = "error"
unused-type-ignore-comment = "error"

[tool.ty.terminal]
error-on-warning = true

[tool.coverage.run]
branch = true
relative_files = true
source = ["./"]
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "pass",
]
precision = 2
skip_covered = true
skip_empty = true
fail_under = 100

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pysyringe/__init__.py"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_classes = "*Test"
python_functions = "test_*"
cache_dir = ".cache/pytest"
filterwarnings = []
